# ndi_player_app

./: .gitignore  commit_local.bat  commit_squash.bat  commit_temp.bat  commit_zip_fix.bat  pubspec.yaml  push_fix.bat
.github/workflows/: android-build.yml  ios-build.yml
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/app/src/main/kotlin/com/antigravity/ndi_player_app/: MainActivity.kt  NdiView.kt
ios/: Podfile  configure_xcode.rb
ios/NDISDK/lib/: .gitignore  split_ndi.ps1
ios/Runner/: AppDelegate.swift  Info.plist  NDI-Bridging-Header.h  NDIManager.swift  NDIView.swift
ios/Runner/Base.lproj/: LaunchScreen.storyboard  Main.storyboard
lib/: main.dart
